Edited wiki page through web user interface.

--- a/wiki/DownloadInstructions.wiki
+++ b/wiki/DownloadInstructions.wiki
@@ -1,1 +1,1 @@
-Binary Downloads are available from the link on the right
+Binary Downloads are hosted [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/ Here]
