Edited wiki page through web user interface.

--- a/wiki/CR_Execute.wiki
+++ b/wiki/CR_Execute.wiki
@@ -22,7 +22,7 @@ Installation instructions can be found on the InstallInstructions page.
 
 = Example = 
 
-Bind Ctrl+LeftClick to "Edit.GoToDefinition"
+Bind Ctrl+LeftClick to "Execute" with a parameter of "Edit.GoToDefinition"
 
 = Credits =
 
