--- a/wiki/PluginResources.wiki
+++ b/wiki/PluginResources.wiki
@@ -2,8 +2,15 @@
 
 = Introduction =
 
+So you'd like to make some cool plugins like the ones here.
+This is intended to be a list of resources for that very task.
+
+This is a process best learned by example. so take a look around... Follow some tutorials .... Download some examples and ask some questions... 
+
+The best place to ask any questions is in the [http://community.devexpress.com/forums/181.aspx "DXCore plugins" forum hosted by DevExpress]
 
 = Blog Posts =
+Mark Miller - Clipboard History (Source Included with Coderush)
 
  * http://community.devexpress.com/blogs/markmiller/archive/2008/09/08/clipboard-history-plug-in-for-visual-studio-with-dxcore-part-1.aspx
  * http://community.devexpress.com/blogs/markmiller/archive/2008/09/08/clipboard-history-plug-in-for-visual-studio-with-dxcore-part-2.aspx
@@ -17,11 +24,3 @@
  * http://community.devexpress.com/blogs/markmiller/archive/2008/09/10/clipboard-history-plug-in-for-visual-studio-with-dxcore-part-10.aspx
  * http://community.devexpress.com/blogs/markmiller/archive/2008/09/10/clipboard-history-plug-in-for-visual-studio-with-dxcore-part-11.aspx
  * http://community.devexpress.com/blogs/markmiller/archive/2008/09/10/clipboard-history-plug-in-for-visual-studio-with-dxcore-part-12.aspx
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
