--- a/wiki/PluginResources.wiki
+++ b/wiki/PluginResources.wiki
@@ -16,8 +16,12 @@ So take a look around...
 
 The best place to ask any questions is in the [http://community.devexpress.com/forums/181.aspx "DXCore plugins" forum hosted by DevExpress]
 
-= Plugin Tutorials =
+= Generic Plugin Tutorials =
+ * [http://rorybecker.blogspot.com/2009/04/dxcore-plugin-types.html DXCore Plugin Types]
+ * [http://rorybecker.blogspot.com/2009/04/creating-new-dxcore-plugin.html Creating a new DXCore plugin]
+ * [http://rorybecker.blogspot.com/2008/03/stringproviders-vs-textcommands.html StringProviders vs TextCommands]
 
+= End to End - Plugin Tutorials =
 Mark Miller - Clipboard History (Source Included with Coderush)
 
  * [http://community.devexpress.com/blogs/markmiller/archive/2008/09/08/clipboard-history-plug-in-for-visual-studio-with-dxcore-part-1.aspx Clipboard History - Part 1]
@@ -32,6 +36,3 @@ Mark Miller - Clipboard History (Source Included with Coderush)
  * [http://community.devexpress.com/blogs/markmiller/archive/2008/09/10/clipboard-history-plug-in-for-visual-studio-with-dxcore-part-10.aspx Clipboard History - Part 10]
  * [http://community.devexpress.com/blogs/markmiller/archive/2008/09/10/clipboard-history-plug-in-for-visual-studio-with-dxcore-part-11.aspx Clipboard History - Part 11]
  * [http://community.devexpress.com/blogs/markmiller/archive/2008/09/10/clipboard-history-plug-in-for-visual-studio-with-dxcore-part-12.aspx Clipboard History - Part 12]
-
-Rory Becker - FAQ
- * [http://rorybecker.blogspot.com/2008/03/stringproviders-vs-textcommands.html StringProviders vs TextCommands]
