--- a/wiki/PluginResources.wiki
+++ b/wiki/PluginResources.wiki
@@ -19,10 +19,15 @@ The best place to ask any questions is in the [http://community.devexpress.com/f
 = Generic Plugin Tutorials =
  * [http://rorybecker.blogspot.com/2009/04/dxcore-plugin-types.html DXCore Plugin Types]
  * [http://rorybecker.blogspot.com/2009/04/creating-new-dxcore-plugin.html Creating a new DXCore plugin]
+
  * [http://rorybecker.blogspot.com/2008/03/stringproviders-vs-textcommands.html StringProviders vs TextCommands]
 
 = End to End - Plugin Tutorials =
-Mark Miller - Clipboard History (Source Included with Coderush)
+
+Kevin Wolf 
+ * [http://new.efficientcoder.net/2008/11/custom-string-to-resource-refactoring.html Custom String to Resource Refactoring with DXCore]
+
+Mark Miller - Clipboard History (Source Included with CodeRush)
 
  * [http://community.devexpress.com/blogs/markmiller/archive/2008/09/08/clipboard-history-plug-in-for-visual-studio-with-dxcore-part-1.aspx Clipboard History - Part 1]
  * [http://community.devexpress.com/blogs/markmiller/archive/2008/09/08/clipboard-history-plug-in-for-visual-studio-with-dxcore-part-2.aspx Clipboard History - Part 2]
