--- a/wiki/MiniCodeColumn.wiki
+++ b/wiki/MiniCodeColumn.wiki
@@ -1,4 +1,5 @@
 #summary Code preview column - Plugin for DxCore
+#labels Decorative
 
 
 = Introduction =
@@ -24,6 +25,3 @@ In this early stage of coding the options page is still missing.
 = Credits =
 
 Originally I found [http://www.hanselman.com/blog/IntroducingRockScroll.aspx RockScroll] on a BlogPost from Scott Hanselman, who credited this piece of software to Rocky Downs.
-
-=== Updates ===
-in a little while I will transfer code from [http://code.google.com/p/dxpluginminicodecol/ my own project] over here for easier access to the community.
