Edited wiki page through web user interface.

--- a/wiki/MiniCodeColumn.wiki
+++ b/wiki/MiniCodeColumn.wiki
@@ -13,11 +13,12 @@ Please follow the general [InstallInstructions] on putting the plugin assembly i
 = Usage =
 
 You can toggle the preview column on/off with a button from the DXCore visual tool bar.
+
 A *double click* to select a word will *highlight* all occurrences in the whole file and highlight it with a red color in the mini code column. You can also *click* on the mini code column to *jump* to any code line. 
 
 Colapsed regions will be fully painted (non collapsed) and splitting the texteditor is still possible (which was not possible with !RockScrollV1). 
 
-If code line would exeed the available space, lines are compressed (2x, 3x etc.) and become _thicker_.
+If code lines would exeed the available space, lines are compressed (2x, 3x etc.) and become _thicker_.
 
 <img src="http://dxcorecommunityplugins.googlecode.com/svn/trunk/MiniCodeColumn/Documents/ScreenShot.png" />
 
