--- a/wiki/MiniCodeColumn.wiki
+++ b/wiki/MiniCodeColumn.wiki
@@ -8,7 +8,7 @@ If you know about [http://www.hanselman.com/blog/IntroducingRockScroll.aspx Rock
 
 === Installation ===
 
-Please follow the general [InstallInstructions] on putting the plugin assembly in the right spot. With the newest !DxCore version you will be asked for a folder to place in community plugins, then this is the place to drop the [http://dxpluginminicodecol.googlecode.com/files/MiniCodeColumn.dll MiniCodeColumn.dll].
+Please follow the general [InstallInstructions] on putting the plugin assembly in the right spot. With the newest !DxCore version you will be asked for a folder to place in community plugins, then this is the place to drop the [http://code.google.com/p/dxpluginminicodecol/downloads/list MiniCodeColumn.dll from the download-list].
 
 === Usage ===
 
@@ -39,9 +39,9 @@ Originally I found [http://www.hanselman.com/blog/IntroducingRockScroll.aspx Roc
 I am R.Warnat and I created this plugin on top of their ideas. 
 
 With some combinations of vista and/or service packs !RockScroll 
-stopped working on my machine and I reinvented _the wheel_. 
+stopped working on my machine and _I reinvented the wheel_. 
 
-So this got again my favorite sticker
+So this got again my favorite sticker :
 </td><td>
 [http://www.hanselman.com/blog/content/binary/WindowsLiveWriter/IntroducingRockScroll_C29C/works-on-my-machine-starburst_3.png]
 </td></tr></table>
