--- a/wiki/CR_MultiFileTemplates.wiki
+++ b/wiki/CR_MultiFileTemplates.wiki
@@ -7,11 +7,11 @@ Create a multi-file Winform without going near the file new dialog
 
 Proof of concept....
 
-  * Install Plug-in and import VB templates [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_MultiFileTemplates/ found here]
-  * Create VB Console App
+  * Install Plug-in and import templates [http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_MultiFileTemplates/ found here]
+  * Create Console App
   * Type {{{cnf<space> }}}
   * Witness the creation of a new Form without visiting the File new Dialog
   * Repeat
   * Notice Form2 used instead of Form1
 
-C# templates can be created just as easily. I may even upload some later.
+Both C# and VB templates are provided. And each installs to "Custom\MultiFile".
