--- a/wiki/HighlightNonDisposedLocals.wiki
+++ b/wiki/HighlightNonDisposedLocals.wiki
@@ -7,7 +7,11 @@ This plugin was written by Mark Miller in a series of blog articles.
 
 = Blog Articles =
 
-  * [http://www.doitwith.net/2007/04/20/HighlightingIDisposableLocalsThatDon'tCallDisposePartI.aspx Part 1]
-  * [http://www.doitwith.net/2007/04/24/HighlightingIDisposableLocalsThatDon'tCallDisposePartII.aspx Part 2]
-  *  [http://www.doitwith.net/2007/04/26/HighlightingIDisposableLocalsThatDon'tCallDisposePartIII.aspx Part 3]
- *  [http://www.doitwith.net/2007/05/09/HighlightingIDisposableLocalsThatDon'tCallDisposePartIV.aspx Part 4]
+Articles originally written do not now appear to be available.
+The following links are to versions found in archive.org. Unfortunately some images have not been preserved :(
+
+
+  * [http://web.archive.org/web/20070430090748/http://www.doitwith.net/2007/04/20/HighlightingIDisposableLocalsThatDon%27tCallDisposePartI.aspx Part 1]
+  * [http://web.archive.org/web/20070516150842/www.doitwith.net/2007/04/24/HighlightingIDisposableLocalsThatDon%27tCallDisposePartII.aspx Part 2]
+  *  [http://web.archive.org/web/20070516104108/www.doitwith.net/2007/04/26/HighlightingIDisposableLocalsThatDon%27tCallDisposePartIII.aspx Part 3]
+ *  [http://web.archive.org/web/20070517001540/www.doitwith.net/2007/05/09/HighlightingIDisposableLocalsThatDon%27tCallDisposePartIV.aspx Part 4]
