--- a/wiki/CR_ReSharperCompatibility.wiki
+++ b/wiki/CR_ReSharperCompatibility.wiki
@@ -1,9 +1,7 @@
 #summary Plugin designed to ease the process of moving from Resharper
 = Introduction =
 
-This is a simple plugin (and a set of key bindings to go with it) designed to ease the process of moving from resharper
-
-or just testing out Coderush from a Resharper user's point of view
+This is a simple plugin (and a set of key bindings to go with it) designed to ease the process of moving from resharper or just testing out Coderush from a Resharper user's point of view.
 
 = Download = 
 Primary download is http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_ReSharperCompatibility/
@@ -11,8 +9,8 @@ Primary download is http://www.rorybecker.me.uk/DevExpress/Plugins/Community/CR_
 There you will find the latest plugin, and also the default shortcuts to help you use it.
 
 = Installation =
-The InstallInstructions page for general instructions are good enough to put the plugin in the right directory but you should also install the shortcut files. 
+The InstallInstructions page for general instructions will help you correctly place the plugin dll, but you should also install the shortcut files. 
 
-The shortcut ini files should be extracted to your settings\IDE folder. You can find the Settings folder through the use of a button on the DevExpress 'About' dialog. Found on the DevExpress\About menu
+The shortcut ini files should be extracted to your Settings\IDE folder. You can find the Settings folder through the use of a button on the DevExpress 'About' dialog. Found on the DevExpress\About menu
 
 This page will be improved over time, but should be enough to get you started.
