--- a/wiki/CR_ReSharperCompatibility.wiki
+++ b/wiki/CR_ReSharperCompatibility.wiki
@@ -1,4 +1,4 @@
-#summary Plugin designed to ease the process of moving from Resharper
+#summary Coderush plugin designed to ease the process of moving from Resharper
 = Introduction =
 
 This is a simple plugin (and a set of key bindings to go with it) designed to ease the process of moving from resharper or just testing out Coderush from a Resharper user's point of view.
@@ -12,5 +12,8 @@ There you will find the latest plugin, and also the default shortcuts to help yo
 The InstallInstructions page for general instructions will help you correctly place the plugin dll, but you should also install the shortcut files. 
 
 The shortcut ini files should be extracted to your Settings\IDE folder. You can find the Settings folder through the use of a button on the DevExpress 'About' dialog. Found on the DevExpress\About menu
+
+= Source = 
+Coderush like this plugin is build on top of the [http://devexpress.com/dxcore DXCore] and the source to this plugin as with all [http://code.google.com/p/dxcorecommunityplugins others on this site] is available free to all.
 
 This page will be improved over time, but should be enough to get you started.
